projects/mamba/tests/cpython/fixtures/type-strict/param_types/errors/abs_rejects_str_argument.py
# /// script
# requires-python = ">=3.12"
# dependencies = []
#
# [tool.mamba]
# bucket = "type-strict"
# lib = "param_types"
# dimension = "errors"
# case = "abs_rejects_str_argument"
# subject = "abs"
# kind = "mechanical"
# xfail = ""
# mem_carveout = ""
# source = ""
# status = "filled"
# ///
# mamba-strict-type: TypeError
"""abs: abs_rejects_str_argument (errors)."""
try:
    result = abs("x")
    print("no_typeerror:", repr(result))
except TypeError as e:
    print("typeerror:", type(e).__name__, str(e)[:80])
